--- a/package.json
+++ b/package.json
@@ -3,25 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import:gallery": "tsx scripts/bulk-import-gallery.ts",
+    "import:gallery:dry": "DRY_RUN=1 tsx scripts/bulk-import-gallery.ts"
+  
   },
   "dependencies": {
+    "@sanity/client": "^7.8.2",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.4.1",
+    "groq": "^4.4.1",
+    "lucide-react": "^0.539.0",
+    "next": "15.4.6",
+    "next-sanity": "^10.0.12",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "sanity": "^4.4.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "tailwindcss": "^4",
+    "tsx": "^4.20.4",
+    "typescript": "^5.9.2"
+  },
+   "engines": {
+    "node": ">=20"
   }
+  
 }
