--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint",
     "import:gallery": "tsx scripts/bulk-import-gallery.ts",
     "import:gallery:dry": "DRY_RUN=1 tsx scripts/bulk-import-gallery.ts"
-  
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@sanity/client": "^7.8.2",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
@@ -24,8 +24,10 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "sanity": "^4.4.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -43,8 +45,7 @@
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
-   "engines": {
+  "engines": {
     "node": ">=20"
   }
-  
 }
