--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "typescript": "^5.9.2"
   },
   "engines": {
-    "node": ">=20"
+    
+  "type": "module",
+  "engines": { "node": ">=20" }
+
   }
 }
