--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@react-three/drei": "^10.7.3",
+    "@react-three/fiber": "^9.3.0",
     "@sanity/client": "^7.8.2",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
@@ -27,6 +29,7 @@
     "react-hook-form": "^7.62.0",
     "sanity": "^4.4.1",
     "styled-components": "^6.1.19",
+    "three": "^0.179.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -46,9 +49,9 @@
     "typescript": "^5.9.2"
   },
   "engines": {
-    
-  "type": "module",
-  "engines": { "node": ">=20" }
-
+    "type": "module",
+    "engines": {
+      "node": ">=20"
+    }
   }
 }
