--- a/package.json
+++ b/package.json
@@ -2,23 +2,22 @@
   "name": "juradruck",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
+    "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "import:gallery": "tsx scripts/bulk-import-gallery.ts",
-    "import:gallery:dry": "DRY_RUN=1 tsx scripts/bulk-import-gallery.ts"
+    "import:gallery:dry": "tsx scripts/bulk-import-gallery.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@react-three/drei": "^10.7.3",
-    "@react-three/fiber": "^9.3.0",
+    "@portabletext/react": "^4.0.1",
     "@sanity/client": "^7.8.2",
-    "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.4.1",
+    "dotenv": "^17.2.1",
     "groq": "^4.4.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
@@ -27,32 +26,29 @@
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
     "sanity": "^4.4.1",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.19",
-    "three": "^0.179.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
-    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "engines": {
-    "type": "module",
-    "engines": {
-      "node": ">=20"
-    }
+    "node": ">=20"
   }
 }
